deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: otus-app-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: otus-app
    template:
       metadata:
          labels:
             app: otus-app
       spec:
          containers:
          - name: otus-app
            image: gusarovvadim/otus_1:latest
            ports:
              - name: web
                containerPort: 8000
