service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-app-service
spec:
  selector:
    app: otus-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
